--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,185 @@
+2004-08-22  Topia  <topia@clovery.jp>
+
+	* HACKING:
+	  - ModuleManager/*_blacklist, Multicast/attach_for_client,
+	    remark/IRCMessage/always-use-colon-on-last-param,
+	    Hook の使い方を追加。
+
+	* tiarra:
+	(shutdown):
+	  - runloop->terminate を使った shutdown を行うようにした。
+	  - runloop->terminate が失敗した時のために、2度以上 shutdown が
+	    呼ばれれば強制終了する。
+
+	* doc-src/conf-main.tdoc, main/Configuration.pm:
+	  - general/messages/quit/netconf-changed-{re,dis}connect を追加。
+
+	* main/IrcIO.pm:
+	(disconnect):
+	  - runloop->unregister_receive_socket を呼ぶ。
+
+	* main/IRCMessage.pm:
+	(serialize):
+	  - remark/always-use-colon-on-last-param 追加。最後のパラメータの
+	    シリアライズ時に必ずコロンを使うようにする。
+	    主にクライアント対策用。
+
+	* main/ModuleManager.pm:
+	(add_to_blacklist, remove_from_blacklist, check_blacklist, _set_blacklist):
+	  - blacklist の実装。
+	(_clear_module_cache, get_modules):
+	  - blacklist を除いた、使用可能モジュールのキャッシュを作る。
+	(terminate):
+	  - mod_timestamp にあるモジュールも destruct/_unload する。
+	(check_timestamp_update):
+	  - 共通ルーチンとしてメソッドにした。
+	(update_modules):
+	  - blacklist 関連処理と、設定は変更されていないがアップデート
+	    されていて、前回ロード失敗しているモジュールの再試行を追加した。
+	(reload_modules_if_modified, _unload):
+	  - blacklist 関連処理の追加。
+
+	* main/Multicast.pm:
+	(_NOTICE_from_server):
+	  - 追加。 MODE で代用していると、メッセージとして global nick
+	    のみが送られてきたときに、改変してしまう。
+	($server_sent):
+	  - NOTICE と PRIVMSG を _NOTICE_from_server へ変更。
+	(attach_for_client):
+	  - 追加。multi-server-mode のときのみ attach する。
+
+	* main/RunLoop.pm:
+	  - set-current-nick フックを追加した。
+	(_new):
+	  - 一時変数として $conf を追加して見やすくする。
+	  - terminated_networks, terminating を追加。
+	(network):
+	  - networks, disconnected_networks, terminated_networks の各
+	    ジャンルを順に検索して、最初に見つかったものとジャンル名を返す。
+	(set_current_nick):
+	  - set-current-nick フックを呼ぶようにした。
+	(_conf, _conf_{general,networks,messages}):
+	  - Configuration::shared_conf->... の短縮形として追加。
+	(_cleanup_closed_link):
+	  - unregister_receive_socket を使うようにした。
+	  - state として reconnecting/terminating/finalizing を受け入れる。
+	(_action_{part_and_join,message_for_each}):
+	  - Multicast::attach_for_client を使うようにした。
+	(update_networks):
+	  - ->_conf* を使うようにした。
+	  - state として reconnecting/finalizing を使う。
+	(terminate_server):
+	  - 追加。 quit し、 conf 変更がない限り自動再接続しない。
+	  - state として terminating を使う。
+	(reconnect_server):
+	  - 何らかのジャンルにあるネットワークを再接続する。
+	(disconnect_server):
+	  - セレクタからの削除は IO->disconnect に任せる。
+	(close_client):
+	  - ERROR を送信してクライアントを切断する。
+	({,un}install_socket):
+	  - ->{,un}register_receive_socket を使うようにした。
+	({,un}register_receive_socket):
+	  - 追加。 ->{receive_selector}->{add,remove} を呼ぶだけ。
+	(run):
+	  - ->_conf* を使うようにした。
+	  - ->{,un}register_receive_socket を使うようにした。
+	  - 終了処理中はクライアントからの接続を受けても即切断する。
+	  - 終了処理を追加。また、 400 回以上ループを回ったら強制終了する。
+	(terminate):
+	  - 全てのサーバ・クライアントを切断する。
+	  - 終了処理フラグを立てる。
+	(apply_filters):
+	  - エラーメッセージを表示するときに、再帰を防ぐために一時的に
+	    ブラックリストに入れる。
+	  - 処理がまわってきているということはブラックリストにないという
+	    ことなので、そのまま解除しても大丈夫なはず。
+	(_apply_filters):
+	  - バージョン管理もしているし、いらないコメントを削除する。
+	(notify_msg):
+	  - ->_conf* を使うようにした。
+
+	* main/TiarraDoc.pm:
+	(_makeconf):
+	  - 空行のときはインデントしないようにした。
+
+	* main/Configuration/Preprocessor.pm:
+	  - 解説コメントが間違っているので訂正。
+
+	* main/IrcIO/Client.pm:
+	(new):
+	  - runloop->register_receive_socket を呼ぶようにした。
+	(username, client_host):
+	  - 追加。プロパティ取得専用。
+	(do_namreply):
+	  - ->inform_joinning_channels の中の names 関連処理だけ分けた。
+	(inform_joinning_channels):
+	  - ->do_namreply を使うようにした。
+
+	* main/IrcIO/Server.pm:
+	  - RunLoop 用の ->state を追加。
+	(connect):
+	  - runloop->register_receive_socket を呼ぶようにした。
+	(quit):
+	  - quit メッセージを送信する。
+
+	* module/Skelton.pm:
+	(message_io_hook):
+	  - 過去から現在進行へ修正。
+
+	* module/Auto/Utils.pm:
+	(sendto_channel_closure):
+	  - Multicast::attach_for_client を使うようにした。
+
+	* module/Client/Cache.pm:
+	  - network が存在しないのはあまり特別な事態ではなくなったので、
+	    debug 時でさえも表示しないようにした。
+
+	* module/Client/Eval.pm:
+	  - 無意味なリスト生成をやめて、配列をそのまま使うようにした。
+
+	* module/Client/Rehash.pm:
+	  - 追加。 nick と names による rehash を行う。
+
+	* module/Log/Channel.pm:
+	  - Log::Writer フレームワークを使うようにした。
+	  - always-flush 設定を追加。
+	  - 現在、 dir の都合によりプロトコルを混ぜることはできません。
+
+	* module/Log/Writer.pm:
+	  - 追加。ログ記録に必要なメソッド(reserve, flush)に限った
+	    マルチプロトコル対応可能なフレームワーク。
+
+	* module/Log/Writer/Base.pm:
+	  - Log::Writer のプロトコルプラグインのベースクラス。
+
+	* module/Log/Writer/File.pm:
+	  - Log::Writer の File プロトコルプラグイン。
+	  - fallback として動作するため、プロトコルを省略したときも
+	    (そして他の fallback によってハンドルされなかったときも)
+	    このプロトコルで処理する。
+	  - ないディレクトリは勝手に作るので注意。
+
+	* module/System/Error.pm:
+	  - 追加。 ERROR メッセージをクライアントに送る前に NOTICE に埋め込む。
+	  - デフォルトオンです。機構的に以前からの conf は救済できません(^^;;
+
+	* module/System/Shutdown.pm:
+	  - シャットダウンメッセージを受け入れるようにした。
+
+	* module/System/NotifyIcon/Win32.pm:
+	  - iconfile と hide-console-on-load 設定を追加。
+	  - 他の雑多な機能は 128 文字対応が全然動いてくれない上に、
+	    実装自体も全然進んでいないので見送りです。
+
+	* module/Tools/FileCache.pm:
+	  - use Carp を追加。
+	  - shared で __PACKAGE__ を使うようにした。
+
+	* module/Tools/FileCache/EachFile.pm:
+	  - ->{add,del}_refcount を ->{add_ref,release} に変更。
+	    内部 API だから影響はないはず。
+
 2004-07-29  Topia  <topia@clovery.jp>
 
 	* main/ModuleManager.pm:
@@ -1811,7 +1993,7 @@
 
 	* これ以前のログは書いていません。
 
-#       Id: $Id: ChangeLog,v 1.157 2004/07/29 06:23:47 topia Exp $
+#       Id: $Id: ChangeLog,v 1.158 2004/08/22 11:28:41 topia Exp $
 #   Author: $Author: topia $
-#     Date: $Date: 2004/07/29 06:23:47 $
-# Revision: $Revision: 1.157 $
+#     Date: $Date: 2004/08/22 11:28:41 $
+# Revision: $Revision: 1.158 $
