* change copyright style. * * * * change copyright style.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,7 @@
 -*- text -*-
 $Id: AUTHORS,v 1.1 2004/02/14 08:44:24 admin Exp $
 プログラム: Tiarra
-メインの開発者: phonohawk <phonohawk@ps.sakura.ne.jp>
+オリジナル開発者: phonohawk <phonohawk@ps.sakura.ne.jp>
 
 Authors (敬称略)
 ===============
